--- a/FinalYearProject/FinalYearProject.csproj
+++ b/FinalYearProject/FinalYearProject.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Assets\Scripts\Animation\Anim_Body.cs" />
     <Compile Include="Assets\Scripts\Animation\Anim_IKBone.cs" />
     <Compile Include="Assets\Scripts\Animation\Anim_IKRoot.cs" />
+    <Compile Include="Assets\Scripts\Animation\Anim_IKTarget.cs" />
     <Compile Include="Assets\Scripts\Animation\Anim_LegTarget.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
