--- a/FinalYearProject/FinalYearProject.Editor.csproj
+++ b/FinalYearProject/FinalYearProject.Editor.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -122,6 +124,7 @@
   <ItemGroup>
     <Compile Include="Assets\Editor\Anim_AnimationControllerEditor.cs" />
     <Compile Include="Assets\Editor\Anim_IKBoneEditor.cs" />
+    <Compile Include="Assets\Editor\Emot_EmotionControllerEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Settings\EmotConfig.xml" />
