--- a/FinalYearProject/FinalYearProject.csproj
+++ b/FinalYearProject/FinalYearProject.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -129,6 +131,7 @@
     <Compile Include="Assets\Scripts\Animation\Anim_IKTarget.cs" />
     <Compile Include="Assets\Scripts\Communication\Comm_EmotToAnim.cs" />
     <Compile Include="Assets\Scripts\Communication\Comm_UIToAnim.cs" />
+    <Compile Include="Assets\Scripts\Communication\Comm_UIToEmot.cs" />
     <Compile Include="Assets\Scripts\Emotion\Emot_Emotion.cs" />
     <Compile Include="Assets\Scripts\Emotion\Emot_EmotionController.cs" />
     <Compile Include="Assets\Scripts\Scenary\Scenary_ParallaxManager.cs" />
@@ -176,8 +179,12 @@
     <None Include="Assets\PostProcessing\Resources\Shaders\Uber.shader" />
     <None Include="Assets\PostProcessing\Resources\Shaders\UberSecondPass.cginc" />
     <None Include="Assets\PostProcessing\Utilities\CustomMotionTexture\Shaders\CustomMotionVectorTexture.shader" />
-    <None Include="Assets\Settings\EmotConfig.xml" />
-    <None Include="Assets\Settings\Personality_Default.xml" />
+    <None Include="Assets\Settings\EmotConfig.xml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Assets\Settings\Personality_Default.xml">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
